add explaination of timetable colorscheme

--- a/tutorenleitfaden.tex
+++ b/tutorenleitfaden.tex
@@ -143,7 +143,7 @@ Insbesondere sollte man vermeiden, den Erstis schon vorab Angst vor bestimmten V
 	Kann man sich direkt in den Kalender importieren.
 	\item Der Ablaufplan der ESE wird am FSR-Büro hinter der Wendeltreppe hängen und auf der ESE-Webseite stehen.
 	\item Die wichtigen Dinge der ESE-Tüte durchgehen.
-	\item Geht die ESE-Woche durch und sagt kurz etwas zu den wichtigsten Programmpunkten (siehe Zeitplan und folgende Anmerkungen zu den einzelnen Tagen)
+	\item Geht die ESE-Woche durch und sagt kurz etwas zu den wichtigsten Programmpunkten (siehe Zeitplan und folgende Anmerkungen zu den einzelnen Tagen, erklärt das Farbschema des Zeitplans im ESE-Heft: rot\rightarrow wichtige Infos, grün \rightarrow Menschen kennenlernen, gelb \rightarrow essen, blau \rightarrow Immafeier)
 	\item Bitte betont nochmal, dass die ESE sehr gut geeignet ist, um Kommilitonen kennenzulernen.
 \end{itemize*}
 Ort der Begrüßung ist der Hörsaal HSZ/004 (Hörsaal-Zentum) und der der Vorträge ist die ganze Woche über die APB/E023.
